Thoughtlog: File uploads.
